<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nametext"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/lawyer_name"
            android:textColor="#333"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/nametext"
            android:textSize="13dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/phonetext"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/phone"

            android:textColor="#333"
            android:textSize="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@id/phonetext"
            android:layout_toRightOf="@id/phonetext"
            android:inputType="phone"
            android:textSize="13sp"
             />

        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/tvPhone"
            android:src="@drawable/call_new" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lawyertext"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/lawyer"
            android:textColor="#333"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLawyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/lawyertext"
            android:textSize="13dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/phonelawyertext"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/lawyer_phone"
            android:textColor="#333"
            android:textSize="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tvLawyerPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:inputType="phone"
            android:layout_toRightOf="@id/phonelawyertext"
            android:textSize="13sp"

            android:layout_toEndOf="@id/phonelawyertext"
            android:layout_marginStart="15dp" />

        <ImageView
            android:id="@+id/ivLawyerCall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/tvLawyerPhone"
            android:src="@drawable/call_new" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emailtext"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="5dp"
            android:text="@string/lawyer_email"
            android:textColor="#333"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/emailtext"
            android:inputType="textEmailAddress"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@id/tvEmail"
            android:src="@drawable/email" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C7C7C7"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="6dp"/>

</LinearLayout>